--- a/odoomoduleyes/views/personne.xml
+++ b/odoomoduleyes/views/personne.xml
@@ -10,14 +10,17 @@
           <field name="inherit_id" ref="crm.crm_lead_view_form"/>
           <field name="arch" type="xml">
               <xpath expr="//field[@name='partner_name']" position="after">
+                  <field name="prenom"/>
                     <field name="secteur_activite_societe"/>
                     <field name="secteur_societe"/>
               </xpath>
               <xpath expr="//field[@name='function']" position="after">
+                  <field name="prenom"/>
+                  <field name="civilite"/>
                     <field name="date_naissance"/>
               </xpath>
 
-              <xpath expr="//page[@name='internal_notes']" position="before">
+              <xpath expr="//page[@name='extra']" position="before">
                   <page string="Informations leader" name="infos">
                        <group>
                            <group>
