--- a/odoomoduleyes/views/references.xml
+++ b/odoomoduleyes/views/references.xml
@@ -38,9 +38,13 @@
             <field name="code_source">S04</field>
             <field name="libelle_source">OPERATION COMMERCIALE</field>
         </record>
-        <record id="src_id_03" model="person.source">
+        <record id="src_id_04" model="person.source">
             <field name="code_source">S05</field>
-            <field name="libelle_source"> </field>
+            <field name="libelle_source">SOGEC</field>
+        </record>
+         <record id="src_id_05" model="person.source">
+            <field name="code_source">S06</field>
+            <field name="libelle_source">KIMPLE</field>
         </record>
 
 
