--- a/odoomoduleyes/views/personne.xml
+++ b/odoomoduleyes/views/personne.xml
@@ -56,6 +56,8 @@
                             <field name="regime_matrimonial"/>
                             <field name="composition_foyer"/>
                             <field name="cumul_pa"/>
+                            <field name="total_coupon"/>
+                            <field name="total_coupon_used"/>
                            </group>
                            <group string="QUALIFICATION">
                                <field name="date_naissance_conjoint"/>
