--- a/odoomoduleyes/views/personne.xml
+++ b/odoomoduleyes/views/personne.xml
@@ -58,6 +58,8 @@
                             <field name="cumul_pa"/>
                             <field name="total_coupon"/>
                             <field name="total_coupon_used"/>
+                               <field name="nombre_coupon_telecharger"/>
+                               <field name="nombre_coupon_utiliser"/>
                            </group>
                            <group string="QUALIFICATION">
                                <field name="date_naissance_conjoint"/>
