--- a/odoomoduleyes/views/personne.xml
+++ b/odoomoduleyes/views/personne.xml
@@ -19,7 +19,7 @@
                   <field name="date_naissance"/>
                   <field name="lead_creation_dt" invisible="1"/>
                   <field name="is_new"/>
-                  <field name="is_birthday"/>
+                  <!-- <field name="is_birthday"/> -->
                   <field name="birthday_computed"/>
                   <field name="date_creation"/>
                   <field name="abn_dt"/>
