--- a/odoomoduleyes/views/personne.xml
+++ b/odoomoduleyes/views/personne.xml
@@ -22,6 +22,7 @@
                   <field name="is_birthday"/>
                   <field name="birthday_computed"/>
                   <field name="birthday_recomputed"/>
+                  <field name="birthday_recomputedmonth"/>
                   <field name="date_creation"/>
                   <field name="abn_dt"/>
               </xpath>
